fix: corrige tamanho mínimo do selectWrap

--- a/src/presentation/components/select/select-styles.scss
+++ b/src/presentation/components/select/select-styles.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   align-items: stretch;
-  min-width: 260px;
+  min-width: 263px;
 
   .portalWrap {
     &[data-status="true"] { display: flex; }
